logs/watchdog_20251012_2200.log
[12/10/2025 22:00:01,72] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 22:00:01,97] END WATCHDOG 
